refactor(core)!: migrate pipeline to rich inbound/outbound messages
- switch dispatcher/pipeline contracts to InboundMessage -> List<OutboundMessage>
- rework CommandSource into a unified context backed by inbound parts + outbound sink
- drop legacy message IO flow and any remaining MessageIn/MessageOut assumptions
- update command/service entrypoints to read primaryText from parts/captions and reply via OutboundMessage